--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             <div class="container">
                 <!-- Project One Row-->
                 <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
-                    <div class="col-lg-6"><a href="IO/starter/guess.html"><img class="img-fluid" src="assets/img/Guessing Image.PNG" alt="" /></a></div>
+                    <div class="col-lg-6"><a href="guess.html"><img class="img-fluid" src="assets/img/Guessing Image.PNG" alt="" /></a></div>
                     <div class="col-lg-6">
                         <div class="bg-black text-center h-100 project">
                             <div class="d-flex h-100">
