--- a/index.html
+++ b/index.html
@@ -130,6 +130,7 @@
                     <a class="mx-2" href="https://www.instagram.com/platypusjayy/"><i class="fab fa-instagram"></i></a>
                     <a class="mx-2" href="https://www.facebook.com/jahmyire.jones.5"><i class="fab fa-facebook-f"></i></a>
                     <a class="mx-2" href="https://www.linkedin.com/in/jahmyire-jones-15942264"><i class="fab fa-linkedin-in"></i></a>
+                    <a class="mx-2" href="https://github.com/Jahmyire"><i class="fab fa-github"></i></a>
                 </div>
             </div>
         </section>
