About Content Update

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     <div class="col-lg-8 mx-auto">
                         <h2 class="text-white mb-4">About Jay</h2>
                         <p class="text-white-50">
-                            Hello.  My name is Jahmyire Jones. I'm an Jr Web Developer based in Erie, PA. I know a wide range of languages ranging from HTML/CSS, JS, PHP, SQL, NodeJS, and Shopify Liquid.  My main three languages are HTML, CSS, and JS.  My favorite language is NodeJS.  I'm interested in anything as long as I get to code.
+                            Hello.  My name is Jahmyire Jones. I'm an Jr Web Developer based in Erie, PA. I know a wide range of languages ranging from HTML/CSS, JS, PHP, SQL, NodeJS, and Shopify Liquid.  My main three languages are HTML, CSS, and JS.  My favorite language is NodeJS.  I'm interested in engaging, fun new projects to work on.
                         </p>
                     </div>
                 </div>
