--- a/index.html
+++ b/index.html
@@ -89,6 +89,21 @@
                         </div>
                     </div>
                 </div>
+                <!--Project Three Row-->
+                <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
+                    <div class="col-lg-6"><a href="https://j6l9dny8fcb0n69u-53286633670.shopifypreview.com"><img class="img-fluid" src="assets/img/Scoops.PNG" alt="" /></a></div>
+                    <div class="col-lg-6">
+                        <div class="bg-black text-center h-100 project">
+                            <div class="d-flex h-100">
+                                <div class="project-text w-100 my-auto text-center text-lg-left">
+                                    <h4 class="text-white">TipsyScoop Landing Page</h4>
+                                    <p class="mb-0 text-white-50">A perfect copy of one of TipsyScoops beautiful website.  Enter at your own risk.  Will make you crave ice cream.(Password: jay)</p>
+                                    <hr class="d-none d-lg-block mb-0 ml-0" />
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </section>
         <!-- Contact-->
