--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                             <div class="d-flex h-100">
                                 <div class="project-text w-100 my-auto text-center text-lg-left">
                                     <h4 class="text-white">TipsyScoop Landing Page</h4>
-                                    <p class="mb-0 text-white-50">A perfect copy of one of TipsyScoops beautiful website.  Enter at your own risk.  Will make you crave ice cream.(Password: jay)</p>
+                                    <p class="mb-0 text-white-50">A perfect copy of one of TipsyScoop's beautiful website.  Enter at your own risk.  Will make you crave ice cream.(Password: jay)</p>
                                     <hr class="d-none d-lg-block mb-0 ml-0" />
                                 </div>
                             </div>
