Shopify Project Links Updated

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                 </div>
                 <!-- Project Two Row-->
                 <div class="row justify-content-center no-gutters">
-                    <div class="col-lg-6"><a href="https://1a8osq3eb072bzv6-41868787867.shopifypreview.com"><img class="img-fluid" src="assets/img/Capture.PNG" alt="" /></a></div>
+                    <div class="col-lg-6"><a href="https://responsvial-intern-project.myshopify.com/?_ab=0&_fd=0&_sc=1&key=cc8a74e6559642ac09a865441ff0ed468109d965fdf51da580f2efe1bf9b6923"><img class="img-fluid" src="assets/img/Capture.PNG" alt="" /></a></div>
                     <div class="col-lg-6 order-lg-first">
                         <div class="bg-black text-center h-100 project">
                             <div class="d-flex h-100">
@@ -91,7 +91,7 @@
                 </div>
                 <!--Project Three Row-->
                 <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
-                    <div class="col-lg-6"><a href="https://j6l9dny8fcb0n69u-53286633670.shopifypreview.com"><img class="img-fluid" src="assets/img/Scoops.PNG" alt="" /></a></div>
+                    <div class="col-lg-6"><a href="https://tipsy-scoop-assignment.myshopify.com/"><img class="img-fluid" src="assets/img/Scoops.PNG" alt="" /></a></div>
                     <div class="col-lg-6">
                         <div class="bg-black text-center h-100 project">
                             <div class="d-flex h-100">
