--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <div class="container d-flex h-100 align-items-center">
                 <div class="mx-auto text-center">
                     <h1 style="color:white">Hello, I'm  <span style="color: pink">Jay</span></h1>
-                    <h2 class="text-white-50 mx-auto mt-2 mb-5">Junior Web Developer.</h2>
+                    <h2 class="text-white-50 mx-auto mt-2 mb-5">FrontEnd/Shopify Developer.</h2>
                     <a class="btn btn-primary js-scroll-trigger" href="#about">Get Started</a>
                 </div>
             </div>
@@ -50,7 +50,7 @@
                     <div class="col-lg-8 mx-auto">
                         <h2 class="text-white mb-4">About Jay</h2>
                         <p class="text-white-50">
-                            Hello.  My name is Jahmyire Jones. I'm an Jr Web Developer based in Erie, PA. I know a wide range of languages ranging from HTML/CSS, JS, PHP, SQL, NodeJS, and Shopify Liquid.  My main three languages are HTML, CSS, and JS.  My favorite language is NodeJS.  I'm interested in engaging, fun new projects to work on.
+                            Hello.  My name is Jahmyire Jones. I'm an FrontEnd Developer based in Erie, PA. I know a wide range of languages including HTML/CSS, JS, PHP, React, NodeJS, and Shopify Liquid.  My main three languages are HTML, CSS, and JS.  My favorite language is React.  I'm interested in engaging, fun new projects to work on.
                         </p>
                     </div>
                 </div>
@@ -74,16 +74,16 @@
                         </div>
                     </div>
                 </div>
-                <!-- Project Two Row-->
-                <div class="row justify-content-center no-gutters">
-                    <div class="col-lg-6"><a href="https://responsvial-intern-project.myshopify.com/?_ab=0&_fd=0&_sc=1&key=cc8a74e6559642ac09a865441ff0ed468109d965fdf51da580f2efe1bf9b6923"><img class="img-fluid" src="assets/img/Capture.PNG" alt="" /></a></div>
+                <!--Project Two Row-->
+                <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
+                    <div class="col-lg-6"><a href="https://tipsy-scoop-assignment.myshopify.com/"><img class="img-fluid" src="assets/img/Scoops.PNG" alt="" /></a></div>
                     <div class="col-lg-6 order-lg-first">
                         <div class="bg-black text-center h-100 project">
                             <div class="d-flex h-100">
-                                <div class="project-text w-100 my-auto text-center text-lg-right">
-                                    <h4 class="text-white">XO Marshmallow Landing Page</h4>
-                                    <p class="mb-0 text-white-50">One of the first projects I did during my internship with Responsival.  This projects highlights my HTML and CSS skills.</p>
-                                    <hr class="d-none d-lg-block mb-0 mr-0" />
+                                <div class="project-text w-100 my-auto text-center text-lg-left">
+                                    <h4 class="text-white">TipsyScoop Landing Page</h4>
+                                    <p class="mb-0 text-white-50">A perfect copy of one of TipsyScoop's beautiful website.  Enter at your own risk.  Will make you crave ice cream.(Password: jay)</p>
+                                    <hr class="d-none d-lg-block mb-0 ml-0" />
                                 </div>
                             </div>
                         </div>
@@ -91,13 +91,28 @@
                 </div>
                 <!--Project Three Row-->
                 <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
-                    <div class="col-lg-6"><a href="https://tipsy-scoop-assignment.myshopify.com/"><img class="img-fluid" src="assets/img/Scoops.PNG" alt="" /></a></div>
+                    <div class="col-lg-6"><a href="https://crystorama.com/"><img class="img-fluid" src="assets/img/crystorama.png" alt="" /></a></div>
                     <div class="col-lg-6">
                         <div class="bg-black text-center h-100 project">
                             <div class="d-flex h-100">
                                 <div class="project-text w-100 my-auto text-center text-lg-left">
-                                    <h4 class="text-white">TipsyScoop Landing Page</h4>
-                                    <p class="mb-0 text-white-50">A perfect copy of one of TipsyScoop's beautiful website.  Enter at your own risk.  Will make you crave ice cream.(Password: jay)</p>
+                                    <h4 class="text-white">Crystorama</h4>
+                                    <p class="mb-0 text-white-50">This is the first website I launched. I designed and developed the mobile version of the landing, and developed almost page on site.</p>
+                                    <hr class="d-none d-lg-block mb-0 ml-0" />
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!--Project Four Row-->
+                <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
+                    <div class="col-lg-6"><a href="https://tipsy-scoop-assignment.myshopify.com/"><img class="img-fluid" src="assets/img/madison.png" alt="" /></a></div>
+                    <div class="col-lg-6 order-lg-first">
+                        <div class="bg-black text-center h-100 project">
+                            <div class="d-flex h-100">
+                                <div class="project-text w-100 my-auto text-center text-lg-left">
+                                    <h4 class="text-white">Madison Avenue Couture</h4>
+                                    <p class="mb-0 text-white-50">One of my favroite clients to work with as a FrontEnd Developer at MinionMade.  This project introduced me to the importance of SEO schema and how Google rank websites. Most of the work for this on-going projects includes SEO related code, app integration, optimization, and minor style tweaks. </p>
                                     <hr class="d-none d-lg-block mb-0 ml-0" />
                                 </div>
                             </div>
@@ -116,7 +131,7 @@
                                 <i class="fas fa-map-marked-alt text-primary mb-2"></i>
                                 <h4 class="text-uppercase m-0">Address</h4>
                                 <hr class="my-4" />
-                                <div class="small text-black-50">5086 Station Rd, Erie PA</div>
+                                <div class="small text-black-50">1071 Newton Avenue, Erie PA</div>
                             </div>
                         </div>
                     </div>
