--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             <div class="container">
                 <!-- Project One Row-->
                 <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
-                    <div class="col-lg-6"><a href="guess.html"><img class="img-fluid" src="assets/img/Guessing Image.PNG" alt="" /></a></div>
+                    <div class="col-lg-6"><a href="guess.html"><img style="height: 100%; object-fit: cover;" class="img-fluid" src="assets/img/Guessing Image.PNG" alt="" /></a></div>
                     <div class="col-lg-6">
                         <div class="bg-black text-center h-100 project">
                             <div class="d-flex h-100">
@@ -76,7 +76,7 @@
                 </div>
                 <!--Project Two Row-->
                 <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
-                    <div class="col-lg-6"><a href="https://tipsy-scoop-assignment.myshopify.com/"><img class="img-fluid" src="assets/img/Scoops.PNG" alt="" /></a></div>
+                    <div class="col-lg-6"><a href="https://tipsy-scoop-assignment.myshopify.com/"><img style="height: 100%; object-fit: cover;" class="img-fluid" src="assets/img/Scoops.PNG" alt="" /></a></div>
                     <div class="col-lg-6 order-lg-first">
                         <div class="bg-black text-center h-100 project">
                             <div class="d-flex h-100">
@@ -91,7 +91,7 @@
                 </div>
                 <!--Project Three Row-->
                 <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
-                    <div class="col-lg-6"><a href="https://crystorama.com/"><img class="img-fluid" src="assets/img/crystorama.png" alt="" /></a></div>
+                    <div class="col-lg-6"><a href="https://crystorama.com/"><img style="height: 100%; object-fit: cover;" class="img-fluid" src="assets/img/crystorama.png" alt="" /></a></div>
                     <div class="col-lg-6">
                         <div class="bg-black text-center h-100 project">
                             <div class="d-flex h-100">
@@ -106,7 +106,7 @@
                 </div>
                 <!--Project Four Row-->
                 <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
-                    <div class="col-lg-6"><a href="https://tipsy-scoop-assignment.myshopify.com/"><img class="img-fluid" src="assets/img/madison.png" alt="" /></a></div>
+                    <div class="col-lg-6"><a href="https://tipsy-scoop-assignment.myshopify.com/"><img style="height: 100%; object-fit: cover;" class="img-fluid" src="assets/img/madison.png" alt="" /></a></div>
                     <div class="col-lg-6 order-lg-first">
                         <div class="bg-black text-center h-100 project">
                             <div class="d-flex h-100">
