--- a/index.html
+++ b/index.html
@@ -76,21 +76,6 @@
                 </div>
                 <!--Project Two Row-->
                 <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
-                    <div class="col-lg-6"><a href="https://tipsy-scoop-assignment.myshopify.com/"><img class="img-fluid" src="assets/img/Scoops.PNG" alt="" /></a></div>
-                    <div class="col-lg-6 order-lg-first">
-                        <div class="bg-black text-center h-100 project">
-                            <div class="d-flex h-100">
-                                <div class="project-text w-100 my-auto text-center text-lg-left">
-                                    <h4 class="text-white">TipsyScoop Landing Page</h4>
-                                    <p class="mb-0 text-white-50">A perfect copy of one of TipsyScoop's beautiful website.  Enter at your own risk.  Will make you crave ice cream.(Password: jay)</p>
-                                    <hr class="d-none d-lg-block mb-0 ml-0" />
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <!--Project Three Row-->
-                <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
                     <div class="col-lg-6"><a href="https://crystorama.com/"><img class="img-fluid" src="assets/img/crystorama.png" alt="" /></a></div>
                     <div class="col-lg-6">
                         <div class="bg-black text-center h-100 project">
@@ -104,7 +89,7 @@
                         </div>
                     </div>
                 </div>
-                <!--Project Four Row-->
+                <!--Project Three Row-->
                 <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
                     <div class="col-lg-6"><a href="https://tipsy-scoop-assignment.myshopify.com/"><img class="img-fluid" src="assets/img/madison.png" alt="" /></a></div>
                     <div class="col-lg-6 order-lg-first">
@@ -113,6 +98,36 @@
                                 <div class="project-text w-100 my-auto text-center text-lg-left">
                                     <h4 class="text-white">Madison Avenue Couture</h4>
                                     <p class="mb-0 text-white-50">One of my favroite clients to work with as a FrontEnd Developer at MinionMade.  This project introduced me to the importance of SEO schema and how Google rank websites. Most of the work for this on-going projects includes SEO related code, app integration, optimization, and minor style tweaks. </p>
+                                    <hr class="d-none d-lg-block mb-0 ml-0" />
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!--Project Four Row-->
+                <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
+                    <div class="col-lg-6"><a href="https://www.brochuwalker.com/"><img class="img-fluid" src="assets/img/bw.png" alt="" /></a></div>
+                    <div class="col-lg-6 order-lg-first">
+                        <div class="bg-black text-center h-100 project">
+                            <div class="d-flex h-100">
+                                <div class="project-text w-100 my-auto text-center text-lg-left">
+                                    <h4 class="text-white">BrochuWalker</h4>
+                                    <p class="mb-0 text-white-50">BrochuWalker became my main priority towards my last days at MinionMade.  Despite having to give it a new look almost every other week, I liked the challenge </p>
+                                    <hr class="d-none d-lg-block mb-0 ml-0" />
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!--Project Five Row-->
+                <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
+                    <div class="col-lg-6"><a href="https://spriteley.com/"><img class="img-fluid" src="assets/img/spriteley.png" alt="" /></a></div>
+                    <div class="col-lg-6 order-lg-first">
+                        <div class="bg-black text-center h-100 project">
+                            <div class="d-flex h-100">
+                                <div class="project-text w-100 my-auto text-center text-lg-left">
+                                    <h4 class="text-white">Spriteley</h4>
+                                    <p class="mb-0 text-white-50">Spritley's website is the first time I tackled a live project outside of Shopify.  I started this project from scratch and turned into what it is today.  The project quickly became one of my favorites.</p>
                                     <hr class="d-none d-lg-block mb-0 ml-0" />
                                 </div>
                             </div>
