--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                 </div>
                 <!--Project Three Row-->
                 <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
-                    <div class="col-lg-6"><a href="https://tipsy-scoop-assignment.myshopify.com/"><img class="img-fluid" src="assets/img/madison.png" alt="" /></a></div>
+                    <div class="col-lg-6"><a href="https://madisonavenuecouture.com/"><img class="img-fluid" src="assets/img/madison.png" alt="" /></a></div>
                     <div class="col-lg-6 order-lg-first">
                         <div class="bg-black text-center h-100 project">
                             <div class="d-flex h-100">
