--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                             <div class="d-flex h-100">
                                 <div class="project-text w-100 my-auto text-center text-lg-left">
                                     <h4 class="text-white">Madison Avenue Couture</h4>
-                                    <p class="mb-0 text-white-50">One of my favroite clients to work with as a FrontEnd Developer at MinionMade.  This project introduced me to the importance of SEO schema and how Google rank websites. Most of the work for this on-going projects includes SEO related code, app integration, optimization, and minor style tweaks. </p>
+                                    <p class="mb-0 text-white-50">One of my favroite clients to work with as a FrontEnd Developer at MinionMade.  This project introduced me to the importance of SEO schema and how Google rank websites. Most of the work for this on-going project includeed SEO related code, app integration, optimization, and minor style tweaks. </p>
                                     <hr class="d-none d-lg-block mb-0 ml-0" />
                                 </div>
                             </div>
@@ -97,7 +97,7 @@
                             <div class="d-flex h-100">
                                 <div class="project-text w-100 my-auto text-center text-lg-left">
                                     <h4 class="text-white">Crystorama</h4>
-                                    <p class="mb-0 text-white-50">This is the first website I launched. I designed and developed the mobile version of the landing, and developed almost page on site.</p>
+                                    <p class="mb-0 text-white-50">This is the first website I launched. I designed and developed the mobile version of the home page, and developed almost every page on site.</p>
                                     <hr class="d-none d-lg-block mb-0 ml-0" />
                                 </div>
                             </div>
@@ -127,7 +127,7 @@
                             <div class="d-flex h-100">
                                 <div class="project-text w-100 my-auto text-center text-lg-left">
                                     <h4 class="text-white">Spriteley</h4>
-                                    <p class="mb-0 text-white-50">Spritley's website is the first time I tackled a live project outside of Shopify.  I started this project from scratch and turned into what it is today.  The project quickly became one of my favorites.</p>
+                                    <p class="mb-0 text-white-50">Spritley's website is the first time I've tackled a project outside of Shopify.  I started this project from scratch and turned into what it is today.  This project quickly became one of my favorites.</p>
                                     <hr class="d-none d-lg-block mb-0 ml-0" />
                                 </div>
                             </div>
