--- a/guess.html
+++ b/guess.html
@@ -27,6 +27,6 @@
         </p>
       </section>
     </main>
-    <script src="guess.js"></script>
+    <script src="js/guess.js"></script>
   </body>
 </html>
