--- a/index.html
+++ b/index.html
@@ -34,15 +34,15 @@
             </div>
         </nav>
         <!-- Masthead-->
-        <header class="masthead">
+        <div class="masthead" id="particle-js">
             <div class="container d-flex h-100 align-items-center">
                 <div class="mx-auto text-center">
                     <h1 style="color:white">Hello, I'm  <span style="color: pink">Jay</span></h1>
-                    <h2 class="text-white-50 mx-auto mt-2 mb-5">FrontEnd/Shopify Developer.</h2>
+                    <h2 class="text-white-50 mx-auto mt-2 mb-5">Full Stack/Shopify Developer.</h2>
                     <a class="btn btn-primary js-scroll-trigger" href="#about">Get Started</a>
                 </div>
             </div>
-        </header>
+        </div>
         <!-- About-->
         <section class="about-section text-center" id="about">
             <div class="container">
@@ -50,7 +50,7 @@
                     <div class="col-lg-8 mx-auto">
                         <h2 class="text-white mb-4">About Jay</h2>
                         <p class="text-white-50">
-                            Hello.  My name is Jahmyire Jones. I'm an FrontEnd Developer based in Erie, PA. I know a wide range of languages including HTML/CSS, JS, PHP, React, NodeJS, and Shopify Liquid.  My main three languages are HTML, CSS, and JS.  My favorite language is React.  I'm interested in engaging, fun new projects to work on.
+                            Hello.  My name is Jahmyire Jones. I'm an Full Stack Developer based in Erie, PA. I know a wide range of languages including HTML/CSS, JS, PHP, React, NodeJS, and Shopify Liquid.  My main three languages are HTML, CSS, and JS.  My favorite language is React.  I'm interested in engaging, fun new projects to work on.
                         </p>
                     </div>
                 </div>
@@ -134,6 +134,21 @@
                         </div>
                     </div>
                 </div>
+                <!--Project Six Row-->
+                <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
+                    <div class="col-lg-6"><a href="https://www.repfitness.com/" target="_blank"><img class="img-fluid" src="assets/img/repfitness.jpg" alt="" /></a></div>
+                    <div class="col-lg-6 order-lg-first">
+                        <div class="bg-black text-center h-100 project">
+                            <div class="d-flex h-100">
+                                <div class="project-text w-100 my-auto text-center text-lg-left">
+                                    <h4 class="text-white">REP FITNESS</h4>
+                                    <p class="mb-0 text-white-50">As a Full-Stack Developer on REP's software engineering team, I’ve contributed to core initiatives including the launch of international storefronts, development of custom Shopify apps, and creation of scalable systems that support operations, fulfillment, and automated QA.</p>
+                                    <hr class="d-none d-lg-block mb-0 ml-0" />
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </section>
         <!-- Contact-->
@@ -146,7 +161,7 @@
                                 <i class="fas fa-map-marked-alt text-primary mb-2"></i>
                                 <h4 class="text-uppercase m-0">Address</h4>
                                 <hr class="my-4" />
-                                <div class="small text-black-50">1071 Newton Avenue, Erie PA</div>
+                                <div class="small text-black-50">976 Pavillion Loop, San Jose CA</div>
                             </div>
                         </div>
                     </div>
@@ -174,7 +189,7 @@
                 <div class="social d-flex justify-content-center">
                     <a class="mx-2" href="https://www.instagram.com/platypusjayy/"><i class="fab fa-instagram"></i></a>
                     <a class="mx-2" href="https://www.facebook.com/jahmyire.jones.5"><i class="fab fa-facebook-f"></i></a>
-                    <a class="mx-2" href="https://www.linkedin.com/in/jahmyire-jones-15942264"><i class="fab fa-linkedin-in"></i></a>
+                    <a class="mx-2" href="https://www.linkedin.com/in/jahmyire-jones"><i class="fab fa-linkedin-in"></i></a>
                     <a class="mx-2" href="https://github.com/Jahmyire"><i class="fab fa-github"></i></a>
                 </div>
             </div>
@@ -187,6 +202,7 @@
         <!-- Third party plugin JS-->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
         <!-- Core theme JS-->
-        <script src="scripts.js"></script>
+        <script type="text/javascript" src="scripts.js"></script>
+        <script type="text/javascript" src="js/particles.min.js"></script>
     </body>
 </html>
